@@ -50,7 +50,7 @@ public class ItemDetailsWizardPanel extends ItemWizardPanel {
 
     @Override
     public void setObject(DcObject dco) {
-        itemForm.setData(dco, true, false, true);
+        itemForm.setData(dco, true, true);
     }
 
     @Override
