@@ -4,6 +4,7 @@ Data Crow version 5.0  BETA IV                Released on 2024-xx-xx
 
 [Beta fixes]:
 - Multi-reference fields were all broken.
+- Online search: item was not correctly updated with the music tracks.
  
 
 --------------------------------------------------------------------
